...
          color="$color11"
        />
        <Text
          fontSize={textSize}
          color="$color11"
        >
          Processing
        </Text>
        <Text
          fontSize="$1"
          color="$color11"
        >
          {`SSML retries: ${ssmlAttempts} | Audio retries: ${audioAttempts}`}
...
